--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Hamidreza Behjoo"
   avatar           : "behjoo.jpg"
-  bio              : "Your biography for the left-hand sidebar"
+  bio              : "hbehjoo@math.arizona.edu"
   location         : "Tucson, AZ"
   employer         :
   #pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
